k8s/apps/farfalla/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: farfalla
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
